# LLMAIx

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile_api  Dockerfile_cpu  Dockerfile_cuda  Dockerfile_metal  README.md  app.py  config.yml  docker-compose-api.yml  docker-compose-cuda.yml  docker-compose.yml  example_csv.csv  levenstein.py  project.toml  pyproject.toml  requirements.freeze.txt  requirements.txt  requirements_api.txt  run_on_ukd.md  setup.py  test_phi3vision.py
.github/workflows/: cuda-gpu-smoke-test.yml  docker-image.yml
docs/: index.html
examples/: Dummy_AlenaBank.docx  Dummy_GuidoKoehler.docx  Dummy_PeterPaulus.docx  Dummy_WolfgangEhrich.docx  artzbericht_long.txt  arztbericht-bild.docx  arztbericht-lang.json  arztbericht.docx  arztbericht.json  arztbericht.txt
examples/emaples_annotiert/: DummyAlenaBank.json  DummyPeterPaulus.json  DummySophieBerger.json  DummyWolfgangEhrich.json
examples/examples deutsch/: Dummy_SophieBerger.docx  annotations.csv  ie_annotation.csv
examples/examples deutsch/examples_annotiert/: DummyGuidoKoehler.json
examples/examples englisch/: Report_AlenaBank.docx  Report_AlenaBank.json  Report_GuidoKöhler.docx  Report_GuidoKöhler.json  Report_PeterPaulus.docx  Report_PeterPaulus.json  Report_SophieBerger.docx  Report_SophieBerger.json  Report_WolfgangEhrich.docx  Report_WolfgangEhrich.json
examples/grammars/: anonymize_grammar_entries.csv  ie_grammar_entries.csv
examples/schemas/: ie_schema.csv
examples2/: INFOEXTRACT_gt_examples.xlsx
examples2/grammarexamples/: ie_grammar_entries.csv
static/: anonymization.md  hardware.md  information_extraction.md  run_on_ukd.md
utils/: leaderboard_conversion.py
webapp/: __init__.py
webapp/annotationhelper/: __init__.py  forms.py  routes.py
webapp/input_processing/: __init__.py  forms.py  routes.py
webapp/labelannotation/: __init__.py  form.py  forms.py  routes.py
webapp/llm_processing/: __init__.py  forms.py  read_strange_csv.py  routes.py  utils.py
webapp/llm_processing/tests/: test_anonymization_utils.py  test_anonymizer_postprocess.py  test_api_integration.py  test_pdf_redaction.py  test_postprocess_grammar.py  test_server_command.py  test_server_lifecycle.py
webapp/main/: routes.py
webapp/report_redaction/: __init__.py  forms.py  routes.py  utils.py
webapp/report_redaction/tests/: test_metrics.py  test_text_matching.py
webapp/static/: style.css
webapp/templates/: annotationhelper_form.html  annotationhelper_overview.html  annotationhelper_queue.html  annotationhelper_selector.html  annotationhelper_viewer.html  index.html  labelannotation_form.html  labelannotation_metrics.html  labelannotation_selector.html  labelannotation_viewer.html  layout.html  llm_processing.html  llm_results.html  report_redaction_form.html  report_redaction_metrics.html  report_redaction_viewer.html
