[build-system]
requires = ["setuptools>=58"]
build-backend = "setuptools.build_meta"

[project]
name = "LLMAIx"
version = "0.3.40"
requires-python = ">= 3.11"
description = "LLM-AIx - A pipeline for information extraction and anonymization of medical documents"
readme = "README.md"
authors = [
    {name = "KatherLab", email = "jakob-nikolas.kather@alumni.dkfz.de"},
]
license = {text = "AGPL-3.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: AGPL-3.0 License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Flask~=3.1.2",
    "Flask-SocketIO~=5.6.0",
    "Flask-WTF~=1.2.2",
    "Flask-SQLAlchemy~=3.1.1",
    "dkpro-cassis~=0.10.1",
    "docx2pdf~=0.1.8",
    "matplotlib~=3.10.8",
    "numpy~=2.4.2",
    "pandas~=2.3.3",
    "pillow~=10.4.0",
    "PyYAML~=6.0.3",
    "seaborn~=0.13.2",
    "requests~=2.32.5",
    "thefuzz~=0.22.1",
    "torch~=2.9.0",
    "torchvision~=0.24.0",
    "transformers~=4.57.6",
    "WTForms~=3.2.1",
    "Flask-HTTPAuth~=4.8.0",
    "python-docx~=1.2.0",
    "timm~=1.0.24",
    "surya-ocr~=0.17.1",
    "scikit-learn~=1.8.0",
    "prometheus_client~=0.24.1",
    "PyMuPDF~=1.26.7",
    "aiohttp~=3.13.3",
    "openpyxl~=3.1.5",
    "openai~=2.17.0"
]

[project.urls]
"Homepage" = "https://github.com/KatherLab/LLMAIx"

[tool.setuptools]
packages = ["webapp"]
[project.optional-dependencies]
test = ["pytest~=9.0.2"]