[build-system]
requires = ["setuptools>=58"]
build-backend = "setuptools.build_meta"

[project]
name = "LLMAIx"
version = "0.4.0"
requires-python = ">= 3.11"
description = "LLM-AIx - A pipeline for information extraction and anonymization of medical documents"
readme = "README.md"
authors = [
    {name = "KatherLab", email = "jakob-nikolas.kather@alumni.dkfz.de"},
]
license = {text = "AGPL-3.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: AGPL-3.0 License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Flask~=3.1.3",
    "Flask-SocketIO~=5.6.1",
    "Flask-WTF~=1.3.0",
    "Flask-SQLAlchemy~=3.1.1",
    "dkpro-cassis~=0.11.1",
    "docx2pdf~=0.1.8",
    "matplotlib~=3.11.1",
    "numpy~=2.4.6",
    "pandas~=3.0.3",
    "pillow~=10.4.0", # capped <11 by surya-ocr
    "PyYAML~=6.0.3",
    "seaborn~=0.13.2",
    "requests~=2.34.2",
    "thefuzz~=0.22.1",
    "torch~=2.13.0",
    "torchvision~=0.28.0",
    "transformers~=5.14.1",
    "WTForms~=3.2.2",
    "Flask-HTTPAuth~=4.8.1",
    "python-docx~=1.2.0",
    "timm~=1.0.28",
    "surya-ocr~=0.22.0",
    "scikit-learn~=1.9.0",
    "prometheus_client~=0.25.0",
    "PyMuPDF~=1.28.0",
    "aiohttp~=3.14.1",
    "openpyxl~=3.1.5",
    "openai~=2.46.0"
]

[project.urls]
"Homepage" = "https://github.com/KatherLab/LLMAIx"

[tool.setuptools]
packages = ["webapp"]
[project.optional-dependencies]
test = ["pytest~=9.1.1"]